# windows-elevate

./: Cargo.toml  README.md
src/: check_elevated.rs  elevate.rs  lib.rs
tests/: integration_test.rs
